--- a/src/app/record-form/record-form.component.html
+++ b/src/app/record-form/record-form.component.html
@@ -1,14 +1,34 @@
 <div [hidden]="submitted">
     <h1>Record Form</h1>
-    <form #recordForm="ngForm" (ngSubmit)="onSubmit()">
+    <form  #recordForm="ngForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
             <label for="name">Name</label>
             <input type="text" #name="ngModel" class="form-control" [(ngModel)]="model.name" id="name" name="name" required>
         </div>
-
-
-
-
-        <button type="submit" class="btn btn-success">Add Record</button>
+        <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+            Name is required
+        </div>
+        <div class="form-group">
+            <label for="description">Description</label>
+            <input type="text" #description="ngModel" class="form-control" [(ngModel)]="model.description"  id="description" name="description" required >
+        </div>
+        <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
+            Desription is required
+        </div>
+        <div class="form-group">
+            <label for="type">Type</label>
+            <input type="text" #type="ngModel" id="type" [(ngModel)]="model.type" class="form-control" required name="type">
+        </div>
+        <div [hidden]="type.valid || type.pristine" class="alert alert-danger">
+            Type is required
+        </div>
+        <div class="form-group">
+            <label for="consuming-date">Consuming Date</label>
+            <input type="datetime-local" #consumingDate="ngModel"  class="form-control" id="consuming-date" name="consumingDate" [(ngModel)]="model.consumingDate" required>
+        </div>
+        <div [hidden]="consumingDate.valid || consumingDate.pristine" class="alert alert-danger">
+            Consumig Date is required
+        </div>
+        <button type="submit" class="btn btn-success" [disabled]="!recordForm.form.valid">Add Record</button>
     </form>
 </div>
