--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import
-url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css')
+url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
 
 /* div{
     background-color: chocolate;
 } */
+
+.ng-valid[required], .ng-valid.required{
+    border-left: 5px solid #42A948;
+}
+
+.ng-invalid:not(form){
+    border-left: 5px solid #a94442;
+}
