--- a/src/app/record-list/record-list.component.css
+++ b/src/app/record-list/record-list.component.css
@@ -2,22 +2,41 @@
     box-sizing: border-box;
 }
 
-a{
+ li a{
     display: flex;
     flex-direction: row;
-    background-color: burlywood;
+    background-color: #7F4F24;
     border-radius: 5px;
     width: 80%;
-    margin-bottom: 10px;;
+    margin: 10px auto;
     color: ghostwhite;
     padding: 10px;
     text-decoration: none;   
+    text-align: center;
+    width: 50vw;
+    justify-content: space-between;
+    opacity: 90%;
+
 }
 
+.nav{
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    width: fit-content;
+}
+
+.record{
+    display: flex;
+    flex-direction: row;
+}
 .record-id{
     background-color: brown;
     margin-right: 10px;
-    justify-self: flex-start;
+    padding: 4px;
+    line-height: normal;
+    border-radius: 5px;
+    border: none;
 }
 .coffee-name {
     margin-right: 25px;
@@ -25,4 +44,32 @@ a{
 
 ul {
    list-style-type: none;
+}
+li{
+    margin: 0;
+    padding: 0;
+}
+li a:hover{
+background-color: #936639;
+}
+
+span{
+    margin-right: 20px;
+}
+
+.record-list{
+    background-image: url('../../assets/images/cups-2.jpg');
+    background-position: bottom;
+}
+button {
+    display: block;
+    margin-top: 20px;
+    color: #936639;
+    background-color: transparent;
+    border: 2px solid #936639;
+}
+
+button:hover{
+    border: 2px solid #A68A64;
+    color: #A68A64;
 }
