--- a/src/app/record/record.component.html
+++ b/src/app/record/record.component.html
@@ -1,13 +1,44 @@
-<div *ngIf="record">
-     <h2>{{record.name | uppercase}} Record Details</h2>
-     <div>Id: {{record.id}}</div>
-     <div>
-          <label for="name">Name: </label>
-          <input id="name" [(ngModel)]="record.name" placeholder="name">
+<div class="content-wrap main" *ngIf="record">
+    <h2>Edit Record</h2>
+<form  #recordForm="ngForm" (ngSubmit)="save()">
+     <div class="form-group">
+          <label for="id">ID</label>
+          <input type="id" class="form-control" [ngModel]="record.id" id="id" name="id" required disabled>
+      </div>
+     <div class="form-group">
+         <label for="name">Name</label>
+         <input type="text" #name="ngModel" class="form-control" [(ngModel)]="record.name" id="name" name="name" required>
      </div>
-     <div class="coffe-description">Description: {{record.description}}</div>
-     <div class="coffee-type">Type: {{record.type}}</div>
-     <div class="consumingn-date">Consuming Date: {{record.consumingDate | date: 'medium'}}</div>
+     <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+         Name is required
+     </div>
+     <div class="form-group">
+         <label for="description">Description</label>
+         <input type="text" #description="ngModel" class="form-control" [(ngModel)]="record.description"  id="description" name="description" required >
+     </div>
+     <div [hidden]="description.valid || description.pristine" class="alert alert-danger">
+         Desription is required
+     </div>
+     <div class="form-group">
+         <label for="type">Type</label>
+         <input type="text" #type="ngModel" id="type" [(ngModel)]="record.type" class="form-control" required name="type">
+     </div>
+     <div class="form-group">
+        <label for="cost">Cost</label>
+        <input type="text" #cost="ngModel" id="cost" [(ngModel)]="record.cost" class="form-control" required name="cost">
+    </div>
+     <div [hidden]="type.valid || type.pristine" class="alert alert-danger">
+         Type is required
+     </div>
+     <div class="form-group">
+         <label for="consuming-date">Consuming Date</label>
+         <input type="datetime-local" #consumingDate="ngModel"  class="form-control" id="consuming-date" name="consumingDate" [(ngModel)]="record.consumingDate" required>
+     </div>
+     <div [hidden]="consumingDate.valid || consumingDate.pristine" class="alert alert-danger">
+         Consumig Date is required
+     </div>
+     <button type="submit" class="btn btn-success" [disabled]="!recordForm.form.valid">Save</button>
+     <button type="button" class="btn btn-danger" (click)="delete()">Delete</button>
+     <button type="button" class="btn btn-go-back" (click)="goBack()">go back</button>
+ </form>
 </div>
-<button type="button" (click)="save()">save</button>
-<button type="button" (click)="goBack()">go back</button>
