--- a/src/styles.css
+++ b/src/styles.css
@@ -6,10 +6,62 @@ url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
     background-color: chocolate;
 } */
 
+
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after{
+    box-sizing: inherit;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    line-height: 1.5;
+}
+
+.content-wrap{
+    background-size: cover;
+    padding: 200px;
+    width: 100%;
+    height: 100vh;
+    max-width:100%;
+    color: #A68A64;
+    font-family: 'Montserrat', sans-serif;
+}
+
 .ng-valid[required], .ng-valid.required{
     border-left: 5px solid #42A948;
 }
 
 .ng-invalid:not(form){
     border-left: 5px solid #a94442;
+}
+
+form {
+    width: 80%;
+    margin: 0 auto;
+    padding: 0 auto;
+}
+
+.btn-go-back:hover{
+ filter: brightness(0.9);
+}
+
+p{
+    color: #333D29;
+    font-weight: 500;
+}
+
+a {
+    margin-right: 20px;
+    text-decoration: none;
+    color: #7f5539;
+}
+
+a:hover{
+    color: #9c6644;
+    text-decoration: none;
 }
