--- a/src/app/record-form/record-form.component.html
+++ b/src/app/record-form/record-form.component.html
@@ -24,13 +24,17 @@
             <label for="type">Type</label>
             <input type="text" #type="ngModel" id="type" [(ngModel)]="model.type" class="form-control" required name="type">
         </div>
+        <div [hidden]="type.valid || type.pristine" class="alert alert-danger">
+            Type is required
+        </div>
         <div class="form-group">
             <label for="cost">Cost</label>
             <input type="text" #cost="ngModel" id="cost" [(ngModel)]="model.cost" class="form-control" required name="cost">
         </div>
-        <div [hidden]="type.valid || type.pristine" class="alert alert-danger">
-            Type is required
+        <div [hidden]="cost.valid || cost.pristine" class="alert alert-danger">
+            Cost is required
         </div>
+       
         <div class="form-group">
             <label for="consuming-date">Consuming Date</label>
             <input type="datetime-local" #consumingDate="ngModel"  class="form-control" id="consuming-date" name="consumingDate"  [(ngModel)]="model.consumingDate" required>
