--- a/src/app/record-list/record-list.component.css
+++ b/src/app/record-list/record-list.component.css
@@ -5,7 +5,7 @@
  li a{
     display: flex;
     flex-direction: row;
-    background-color: #7F4F24;
+    background-color: #936639;
     border-radius: 5px;
     width: 80%;
     margin: 10px auto;
@@ -15,7 +15,8 @@
     text-align: center;
     width: 50vw;
     justify-content: space-between;
-    opacity: 90%;
+    opacity: 85%;
+    border: 2px solid #7F4F24; 
 
 }
 
@@ -34,6 +35,7 @@
     background-color: brown;
     margin-right: 10px;
     padding: 4px;
+    min-width: 30px;
     line-height: normal;
     border-radius: 5px;
     border: none;
@@ -51,6 +53,7 @@ li{
 }
 li a:hover{
 background-color: #936639;
+opacity: 100%;
 }
 
 span{
