--- a/src/app/record/record.component.html
+++ b/src/app/record/record.component.html
@@ -38,7 +38,7 @@
          Consumig Date is required
      </div>
      <button type="submit" class="btn btn-success" [disabled]="!recordForm.form.valid">Save</button>
-     <button type="button" class="btn btn-danger" (click)="delete()">Delete</button>
+     <button type="button" class="btn btn-danger" title = "delete record" (click)="delete()">Delete</button>
      <button type="button" class="btn btn-go-back" (click)="goBack()">go back</button>
  </form>
 </div>
